--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nesthacker/nestjs-storage",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "description": "provides an injectable storage (S3, GS) client to provide storage access from NestJs modules",
   "author": "Sameer Khandke",
   "private": false,
@@ -19,18 +19,17 @@
     "azure-storage"
   ],
   "scripts": {
-    "prebuild": "rimraf dist",
-    "build": "nest build",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{lib}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "build": "rm -rf dist && tsc -p tsconfig.json",
+    "format": "prettier --write \"**/*.ts\"",
+    "lint": "eslint 'lib/**/*.ts' --fix",
+    "prepublish:npm": "npm run build",
+    "publish:npm": "npm publish --access public",
+    "prepublish:next": "npm run build",
+    "publish:next": "npm publish --access public --tag next",
+    "test:e2e": "jest --config ./tests/jest-e2e.json --runInBand",
+    "test:e2e:dev": "jest --config ./tests/jest-e2e.json --runInBand --watch",
+    "prerelease": "npm run build",
+    "release": "release-it"
   },
   "dependencies": {
     "@azure/storage-blob": "^12.10.0",
@@ -44,24 +43,26 @@
   },
   "devDependencies": {
     "@azure/storage-blob": "^12.10.0",
+    "@commitlint/config-angular": "^17.0.3",
     "@google-cloud/storage": "^6.2.0",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
-    "aws-sdk": "^2.1162.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0",
     "@nestjs/testing": "^8.0.0",
     "@types/jest": "27.0.2",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "aws-sdk": "^2.1162.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.5",
     "prettier": "^2.3.2",
+    "reflect-metadata": "^0.1.13",
+    "release-it": "^15.1.0",
+    "rimraf": "^3.0.2",
+    "rxjs": "^7.2.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^27.0.3",
