--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,21 +2,17 @@
     "compilerOptions": {
         "module": "commonjs",
         "declaration": true,
-        "removeComments": true,
+        "strict": true,
+        "removeComments": false,
+        "noLib": false,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true,
-        "target": "es2017",
-        "sourceMap": true,
+        "target": "es6",
+        "sourceMap": false,
         "outDir": "./dist",
-        "baseUrl": "./",
-        "incremental": true,
+        "rootDir": "./lib",
         "skipLibCheck": true,
-        "strictNullChecks": false,
-        "noImplicitAny": false,
-        "strictBindCallApply": false,
-        "forceConsistentCasingInFileNames": false,
-        "noFallthroughCasesInSwitch": false,
+        "useUnknownInCatchVariables": false,
     },
     "include": [
         "lib/**/*"
@@ -24,6 +20,5 @@
     "exclude": [
         "node_modules",
         "test",
-
     ]
 }
